# sumo_if_ros

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  README.md  package.xml  requirements.cmake  requirements.ppa  requirements.system  start_sumo_bridge.sh
include/: adore_sumo_traffic.hpp
src/: adore_sumo_bridge.cpp
sumo_configs/: gui_settings.xml
sumo_configs/example_scenario/: build.bat  edgeData.xml  osm.netccfg  osm.ogcfg  osm.passenger.trips.xml  osm.polycfg  osm.sumocfg  output.add.xml  stats.xml  tripinfos.xml
