<?xml version="1.0"?>
<!--********************************************************************************
 * Copyright (C) 2017-2020 German Aerospace Center (DLR). 
 * Eclipse ADORe, Automated Driving Open Research https://eclipse.org/adore
 *
 * This program and the accompanying materials are made available under the 
 * terms of the Eclipse Public License 2.0 which is available at
 * http://www.eclipse.org/legal/epl-2.0.
 *
 * SPDX-License-Identifier: EPL-2.0 
 *
 * Contributors: 
 *   Matthias Nichting
 ********************************************************************************-->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sumo_bridge</name>
  <version>0.0.1</version>
  <description>Interface for use of ADORe with SUMO</description>
  <maintainer email="opensource-ts@dlr.de">DLR-TS</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>adore_ros2_msgs</build_depend>
  <depend>sumocpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>